--- a/Módulo 3/Web/web.html
+++ b/Módulo 3/Web/web.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div align="left">
-            <a href="https://github.com/fernandogonzalez11/MagIAJuvenil2021" target="_blank">mi repo lol</a><br>
+            <a class="mono" href="https://github.com/fernandogonzalez11/MagIAJuvenil2021" target="_blank">mi repo lol</a><br>
         </div>
         <div align="center">
             <h1>Sesión 2</h1>
