Clase 3 Módulo 3 Añadí comentarios

--- a/Módulo 3/Web/web2.html
+++ b/Módulo 3/Web/web2.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Título -->
         <title>funny 2</title>
-        <meta charset="UTF-8">
+        <!-- Ícono -->
         <link rel="icon" type="image/png" href="assets/funi.png">
+        <!-- Usar UTF-8 -->
+        <meta charset="UTF-8">
+        <!-- Importar mi CSS -->
         <link rel="stylesheet" type="text/css" href="styles/main.css">
+
+        <!-- SweetAlert -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
         <link type="text/css" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+
+        <!-- Importar mi JS -->
         <script  type="text/javascript" src="scripts/index.js"></script>
     </head>
     <body>
